--- a/NIH.ipynb
+++ b/NIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f0739000",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "024447f4",
    "metadata": {},
    "outputs": [
@@ -500,6 +500,106 @@
     "df_clean.to_csv(\"nat2018_clean.csv\", index=False)\n",
     "\n",
     "print(df_clean.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1b00099c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] 使用数值列 165，类别列 0\n",
+      "[INFO] PCA 主成分数: 50, 累计解释方差: 0.980\n",
+      "[RESULT] PCA+Linear Regression → RMSE: 469.0 g | R²: 0.322\n",
+      "[SANITY] y(mean±std)=3401.1±584.4, pred(min,max)=(1665.6, 6339.8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import root_mean_squared_error, r2_score\n",
+    "import sklearn\n",
+    "\n",
+    "# ========= 0) 数据准备 =========\n",
+    "df = df_clean.copy()\n",
+    "df.columns = df.columns.str.lower()\n",
+    "assert \"dbwt\" in df.columns, \"找不到 dbwt 列（出生体重）\"\n",
+    "\n",
+    "# 丢掉 y 缺失 & 明显异常\n",
+    "df = df[df[\"dbwt\"].notna()].copy()\n",
+    "df = df[(df[\"dbwt\"] >= 500) & (df[\"dbwt\"] <= 6000)].copy()\n",
+    "\n",
+    "# 强制移除派生泄漏列\n",
+    "leak_cols = [\"bwtr12\", \"bwtr4\"]\n",
+    "df = df.drop(columns=[c for c in leak_cols if c in df.columns])\n",
+    "\n",
+    "# 特征/目标\n",
+    "X = df.drop(columns=[\"dbwt\"])\n",
+    "y = df[\"dbwt\"].astype(float).values\n",
+    "\n",
+    "# 列类型划分\n",
+    "num_cols = X.select_dtypes(include=\"number\").columns.tolist()\n",
+    "cat_cols = X.select_dtypes(exclude=\"number\").columns.tolist()\n",
+    "print(f\"[INFO] 使用数值列 {len(num_cols)}，类别列 {len(cat_cols)}\")\n",
+    "\n",
+    "# ========= 1) 先切分，再在训练集上拟合（避免泄漏）=========\n",
+    "Xtr_raw, Xva_raw, ytr, yva = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# ========= 2) 预处理（数值：中位数填充+标准化；类别：众数填充+OneHot(稠密)）=========\n",
+    "# sklearn 1.2+ 用 sparse_output；老版本用 sparse=False\n",
+    "ohe_kwargs = {}\n",
+    "ver = tuple(map(int, sklearn.__version__.split(\".\")[:2]))\n",
+    "if ver >= (1, 2):\n",
+    "    ohe_kwargs[\"sparse_output\"] = False\n",
+    "else:\n",
+    "    ohe_kwargs[\"sparse\"] = False\n",
+    "\n",
+    "num_pipe = Pipeline([\n",
+    "    (\"imp\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "cat_pipe = Pipeline([\n",
+    "    (\"imp\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\", **ohe_kwargs))\n",
+    "])\n",
+    "\n",
+    "preprocess = ColumnTransformer([\n",
+    "    (\"num\", num_pipe, num_cols),\n",
+    "    (\"cat\", cat_pipe, cat_cols)\n",
+    "])\n",
+    "\n",
+    "# ========= 3) PCA + Linear Regression ==========\n",
+    "model = Pipeline([\n",
+    "    (\"preprocess\", preprocess),\n",
+    "    (\"pca\", PCA(n_components=50, svd_solver=\"full\", random_state=42)),  # 或 n_components=0.95\n",
+    "    (\"linreg\", LinearRegression())\n",
+    "])\n",
+    "\n",
+    "# ========= 4) 训练与评估 ==========\n",
+    "model.fit(Xtr_raw, ytr)\n",
+    "pred = model.predict(Xva_raw)\n",
+    "\n",
+    "rmse = root_mean_squared_error(yva, pred)\n",
+    "r2 = r2_score(yva, pred)\n",
+    "\n",
+    "pca = model.named_steps[\"pca\"]\n",
+    "expl = pca.explained_variance_ratio_.sum()\n",
+    "print(f\"[INFO] PCA 主成分数: {pca.n_components_}, 累计解释方差: {expl:.3f}\")\n",
+    "print(f\"[RESULT] PCA+Linear Regression → RMSE: {rmse:.1f} g | R²: {r2:.3f}\")\n",
+    "print(f\"[SANITY] y(mean±std)={ytr.mean():.1f}±{ytr.std():.1f}, pred(min,max)=({pred.min():.1f}, {pred.max():.1f})\")\n"
    ]
   }
  ],
