--- a/NIH.ipynb
+++ b/NIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "f0739000",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "024447f4",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "1b00099c",
    "metadata": {},
    "outputs": [
@@ -600,6 +600,340 @@
     "print(f\"[INFO] PCA 主成分数: {pca.n_components_}, 累计解释方差: {expl:.3f}\")\n",
     "print(f\"[RESULT] PCA+Linear Regression → RMSE: {rmse:.1f} g | R²: {r2:.3f}\")\n",
     "print(f\"[SANITY] y(mean±std)={ytr.mean():.1f}±{ytr.std():.1f}, pred(min,max)=({pred.min():.1f}, {pred.max():.1f})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "65e39029",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] device = cpu | sklearn: 1.4.2 | torch: 2.3.1\n",
+      "[INFO] 使用数值列 165，类别列 0\n",
+      "[SPLIT] train=6993 | val=1498 | test=1499\n",
+      "[INFO] PCA 主成分数: 50 | 累计解释方差: 0.980\n",
+      "PcaRegressor(\n",
+      "  (net): Sequential(\n",
+      "    (0): Linear(in_features=50, out_features=128, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (3): Dropout(p=0.2, inplace=False)\n",
+      "    (4): Linear(in_features=128, out_features=64, bias=True)\n",
+      "    (5): ReLU()\n",
+      "    (6): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (7): Dropout(p=0.2, inplace=False)\n",
+      "    (8): Linear(in_features=64, out_features=32, bias=True)\n",
+      "    (9): ReLU()\n",
+      "    (10): Linear(in_features=32, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "Epoch 001 | val_loss=0.60809 (std-y 尺度) | lr=0.000998\n",
+      "Epoch 010 | val_loss=0.51391 (std-y 尺度) | lr=0.000998\n",
+      "Epoch 020 | val_loss=0.51192 (std-y 尺度) | lr=0.000998\n",
+      "Epoch 030 | val_loss=0.52739 (std-y 尺度) | lr=0.000998\n",
+      "Epoch 040 | val_loss=0.53524 (std-y 尺度) | lr=0.000998\n",
+      "[EarlyStopping] 第 40 轮触发 | 最佳验证损失=0.51192\n",
+      "[VAL] RMSE: 417.8 g | R²: 0.463 | pred(min,max)=(302.5,4089.9)\n",
+      "[TEST] RMSE: 432.5 g | R²: 0.448 | pred(min,max)=(612.0,4117.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =========================================================\n",
+    "# 0) Imports & 全局设置\n",
+    "# =========================================================\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from torch.optim import Adam, AdamW\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau, CosineAnnealingWarmRestarts\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"[INFO] device =\", device, \"| sklearn:\", sklearn.__version__, \"| torch:\", torch.__version__)\n",
+    "\n",
+    "# =========================================================\n",
+    "# 1) 数据准备（以 df_clean 为源）\n",
+    "# =========================================================\n",
+    "df = df_clean.copy()\n",
+    "df.columns = df.columns.str.lower()\n",
+    "assert \"dbwt\" in df.columns, \"找不到 dbwt 列（出生体重，克）\"\n",
+    "\n",
+    "# 丢掉 y 缺失与异常\n",
+    "df = df[df[\"dbwt\"].notna()].copy()\n",
+    "df = df[(df[\"dbwt\"] >= 500) & (df[\"dbwt\"] <= 6000)].copy()\n",
+    "\n",
+    "# 移除潜在泄漏列（如果存在）\n",
+    "leak_cols = [\"bwtr12\", \"bwtr4\"]\n",
+    "df = df.drop(columns=[c for c in leak_cols if c in df.columns])\n",
+    "\n",
+    "# 特征与目标\n",
+    "X = df.drop(columns=[\"dbwt\"])\n",
+    "y = df[\"dbwt\"].astype(float).values\n",
+    "\n",
+    "# 列类型划分\n",
+    "num_cols = X.select_dtypes(include=\"number\").columns.tolist()\n",
+    "cat_cols = X.select_dtypes(exclude=\"number\").columns.tolist()\n",
+    "print(f\"[INFO] 使用数值列 {len(num_cols)}，类别列 {len(cat_cols)}\")\n",
+    "\n",
+    "# =========================================================\n",
+    "# 2) 三划分：train / val / test（回归用分箱伪分层）\n",
+    "# =========================================================\n",
+    "def make_strata(y, q=10):\n",
+    "    try:\n",
+    "        return pd.qcut(y, q=q, labels=False, duplicates=\"drop\")\n",
+    "    except Exception:\n",
+    "        return None\n",
+    "\n",
+    "strata = make_strata(y, q=10)\n",
+    "\n",
+    "# 70% train, 15% val, 15% test\n",
+    "Xtr_raw, Xtemp, ytr, ytemp, strata_tr, strata_temp = train_test_split(\n",
+    "    X, y, strata, test_size=0.30, random_state=42,\n",
+    "    stratify=strata if strata is not None else None\n",
+    ")\n",
+    "\n",
+    "Xva_raw, Xte_raw, yva, yte, strata_va, strata_te = train_test_split(\n",
+    "    Xtemp, ytemp, strata_temp, test_size=0.50, random_state=42,\n",
+    "    stratify=strata_temp if strata is not None else None\n",
+    ")\n",
+    "\n",
+    "print(f\"[SPLIT] train={len(ytr)} | val={len(yva)} | test={len(yte)}\")\n",
+    "\n",
+    "# =========================================================\n",
+    "# 3) 预处理（数值：中位数填充+标准化；类别：众数填充+OneHot）\n",
+    "# =========================================================\n",
+    "ohe_kwargs = {}\n",
+    "ver = tuple(map(int, sklearn.__version__.split(\".\")[:2]))\n",
+    "if ver >= (1, 2):\n",
+    "    ohe_kwargs[\"sparse_output\"] = False\n",
+    "else:\n",
+    "    ohe_kwargs[\"sparse\"] = False\n",
+    "\n",
+    "num_pipe = Pipeline([\n",
+    "    (\"imp\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "cat_pipe = Pipeline([\n",
+    "    (\"imp\", SimpleImputer(strategy=\"most_frequent\")),\n",
+    "    (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\", **ohe_kwargs))\n",
+    "])\n",
+    "\n",
+    "preprocess = ColumnTransformer([\n",
+    "    (\"num\", num_pipe, num_cols),\n",
+    "    (\"cat\", cat_pipe, cat_cols)\n",
+    "])\n",
+    "\n",
+    "# =========================================================\n",
+    "# 4) PCA（只在训练集上 fit），n_components=150（可调或用 0.95）\n",
+    "# =========================================================\n",
+    "pca_dim_target = 50  # 你指定的维度；也可改为 0.95（保留95%方差）\n",
+    "prep_pca = Pipeline([\n",
+    "    (\"preprocess\", preprocess),\n",
+    "    (\"pca\", PCA(n_components=pca_dim_target, svd_solver=\"full\", random_state=42))\n",
+    "])\n",
+    "\n",
+    "prep_pca.fit(Xtr_raw, ytr)\n",
+    "Ztr = prep_pca.transform(Xtr_raw)\n",
+    "Zva = prep_pca.transform(Xva_raw)\n",
+    "Zte = prep_pca.transform(Xte_raw)\n",
+    "\n",
+    "pca = prep_pca.named_steps[\"pca\"]\n",
+    "expl = pca.explained_variance_ratio_.sum()\n",
+    "print(f\"[INFO] PCA 主成分数: {pca.n_components_} | 累计解释方差: {expl:.3f}\")\n",
+    "\n",
+    "# =========================================================\n",
+    "# 5) 目标标准化（提升回归稳定性）\n",
+    "# =========================================================\n",
+    "y_mean, y_std = ytr.mean(), ytr.std()\n",
+    "ytr_std = (ytr - y_mean) / y_std\n",
+    "yva_std = (yva - y_mean) / y_std\n",
+    "yte_std = (yte - y_mean) / y_std\n",
+    "\n",
+    "# =========================================================\n",
+    "# 6) 张量与 DataLoader\n",
+    "# =========================================================\n",
+    "Xtr_t = torch.tensor(Ztr, dtype=torch.float32)\n",
+    "Xva_t = torch.tensor(Zva, dtype=torch.float32)\n",
+    "Xte_t = torch.tensor(Zte, dtype=torch.float32)\n",
+    "\n",
+    "ytr_t = torch.tensor(ytr_std, dtype=torch.float32).unsqueeze(1)\n",
+    "yva_t = torch.tensor(yva_std, dtype=torch.float32).unsqueeze(1)\n",
+    "yte_t = torch.tensor(yte_std, dtype=torch.float32).unsqueeze(1)\n",
+    "\n",
+    "train_loader = DataLoader(TensorDataset(Xtr_t, ytr_t), batch_size=256, shuffle=True)\n",
+    "val_loader   = DataLoader(TensorDataset(Xva_t, yva_t), batch_size=1024, shuffle=False)\n",
+    "test_loader  = DataLoader(TensorDataset(Xte_t, yte_t), batch_size=1024, shuffle=False)\n",
+    "\n",
+    "# =========================================================\n",
+    "# 7) 模型（两种二选一）——默认启用「简单版」\n",
+    "# =========================================================\n",
+    "USE_STRONG_RESIDUAL = False  # ← 想用更强的残差版就改为 True\n",
+    "\n",
+    "class PreNormResidual(nn.Module):\n",
+    "    def __init__(self, dim, hidden, dropout=0.3):\n",
+    "        super().__init__()\n",
+    "        self.norm1 = nn.LayerNorm(dim)\n",
+    "        self.ff1 = nn.Sequential(nn.Linear(dim, hidden), nn.SiLU(), nn.Dropout(dropout))\n",
+    "        self.norm2 = nn.LayerNorm(hidden)\n",
+    "        self.ff2 = nn.Linear(hidden, dim)\n",
+    "    def forward(self, x):\n",
+    "        h = self.ff1(self.norm1(x))\n",
+    "        h = self.ff2(self.norm2(h))\n",
+    "        return x + h\n",
+    "\n",
+    "class StrongRegressor(nn.Module):\n",
+    "    def __init__(self, in_dim, width=256, depth=4, dropout=0.3):\n",
+    "        super().__init__()\n",
+    "        self.inp = nn.Sequential(nn.LayerNorm(in_dim), nn.Linear(in_dim, width), nn.SiLU())\n",
+    "        self.blocks = nn.Sequential(*[PreNormResidual(width, width, dropout) for _ in range(depth)])\n",
+    "        self.head = nn.Sequential(nn.LayerNorm(width), nn.Linear(width, width//2), nn.SiLU(), nn.Linear(width//2, 1))\n",
+    "    def forward(self, x):\n",
+    "        x = self.inp(x); x = self.blocks(x); return self.head(x)\n",
+    "\n",
+    "model = StrongRegressor(pca_dim_target).to(device)\n",
+    "\n",
+    "\n",
+    "in_dim = Ztr.shape[1]\n",
+    "if USE_STRONG_RESIDUAL:\n",
+    "    model = StrongRegressor(in_dim=in_dim, width=256, depth=4, dropout=0.3).to(device)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = AdamW(model.parameters(), lr=1e-3, weight_decay=2e-5)\n",
+    "    scheduler_mode = \"cosine\"\n",
+    "    scheduler = CosineAnnealingWarmRestarts(optimizer, T_0=20, T_mult=2)\n",
+    "else:\n",
+    "    model = PcaRegressor(in_dim).to(device)\n",
+    "    # 注意：你之前设置 lr=1e-1 偏大，容易不稳；这里用 1e-3 更靠谱\n",
+    "    criterion = nn.MSELoss()                          # 更贴近 RMSE \n",
+    "    optimizer = AdamW(model.parameters(), lr=1e-3, weight_decay=2e-5)\n",
+    "\n",
+    "    # 调度器：余弦退火 + warm restarts（代替 ReduceLROnPlateau）\n",
+    "    from torch.optim.lr_scheduler import CosineAnnealingWarmRestarts\n",
+    "    scheduler = CosineAnnealingWarmRestarts(optimizer, T_0=20, T_mult=2)\n",
+    "\n",
+    "\n",
+    "print(model)\n",
+    "\n",
+    "# =========================================================\n",
+    "# 8) 训练循环（带 EarlyStopping）\n",
+    "# =========================================================\n",
+    "epochs = 300\n",
+    "patience = 20\n",
+    "best_val = float(\"inf\")\n",
+    "best_state = None\n",
+    "wait = 0\n",
+    "\n",
+    "def evaluate_avg_loss(loader):\n",
+    "    model.eval()\n",
+    "    loss_sum, n = 0.0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for xb, yb in loader:\n",
+    "            xb, yb = xb.to(device), yb.to(device)\n",
+    "            pred = model(xb)\n",
+    "            loss = criterion(pred, yb)\n",
+    "            bs = xb.shape[0]\n",
+    "            loss_sum += loss.item() * bs\n",
+    "            n += bs\n",
+    "    return loss_sum / max(n, 1)\n",
+    "\n",
+    "for epoch in range(1, epochs + 1):\n",
+    "    model.train()\n",
+    "    for xb, yb in train_loader:\n",
+    "        xb, yb = xb.to(device), yb.to(device)\n",
+    "        pred = model(xb)\n",
+    "        loss = criterion(pred, yb)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        nn.utils.clip_grad_norm_(model.parameters(), max_norm=5.0)\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    val_loss = evaluate_avg_loss(val_loader)\n",
+    "\n",
+    "    # 调度\n",
+    "    if scheduler_mode == \"plateau\":\n",
+    "        scheduler.step(val_loss)\n",
+    "    else:\n",
+    "        scheduler.step(epoch)\n",
+    "\n",
+    "    # 早停\n",
+    "    if val_loss < best_val - 1e-6:\n",
+    "        best_val = val_loss\n",
+    "        best_state = {k: v.cpu().clone() for k, v in model.state_dict().items()}\n",
+    "        wait = 0\n",
+    "    else:\n",
+    "        wait += 1\n",
+    "\n",
+    "    if epoch % 10 == 0 or epoch == 1:\n",
+    "        print(f\"Epoch {epoch:03d} | val_loss={val_loss:.5f} (std-y 尺度) | lr={optimizer.param_groups[0]['lr']:.6f}\")\n",
+    "\n",
+    "    if wait >= patience:\n",
+    "        print(f\"[EarlyStopping] 第 {epoch} 轮触发 | 最佳验证损失={best_val:.5f}\")\n",
+    "        break\n",
+    "\n",
+    "if best_state is not None:\n",
+    "    model.load_state_dict(best_state)\n",
+    "\n",
+    "# =========================================================\n",
+    "# 9) 评估：验证集与测试集（还原到克单位）\n",
+    "# =========================================================\n",
+    "def inv_std(y_std_arr):\n",
+    "    return y_std_arr * y_std + y_mean\n",
+    "\n",
+    "def eval_rmse_r2(X_t, y_true, name=\"SPLIT\"):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        y_pred_std = model(X_t.to(device)).cpu().numpy().ravel()\n",
+    "    y_pred = inv_std(y_pred_std)\n",
+    "    rmse = mean_squared_error(y_true, y_pred, squared=False)\n",
+    "    r2   = r2_score(y_true, y_pred)\n",
+    "    print(f\"[{name}] RMSE: {rmse:.1f} g | R²: {r2:.3f} | pred(min,max)=({y_pred.min():.1f},{y_pred.max():.1f})\")\n",
+    "    return rmse, r2\n",
+    "\n",
+    "_ = eval_rmse_r2(Xva_t, yva, name=\"VAL\")\n",
+    "_ = eval_rmse_r2(Xte_t, yte, name=\"TEST\")\n",
+    "\n",
+    "# =========================================================\n",
+    "# 10) 推理函数（新样本 DataFrame → 预测克重）\n",
+    "# =========================================================\n",
+    "def predict_dbwt_with_torch(df_new: pd.DataFrame) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    输入：原始特征表 df_new（列需与训练时一致）\n",
+    "    输出：预测出生体重（克）\n",
+    "    \"\"\"\n",
+    "    Z_new = prep_pca.transform(df_new)  # 预处理 + PCA\n",
+    "    X_new = torch.tensor(Z_new, dtype=torch.float32).to(device)\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        y_pred_std = model(X_new).cpu().numpy().ravel()\n",
+    "    return inv_std(y_pred_std)\n"
    ]
   }
  ],
