--- a/NIH.ipynb
+++ b/NIH.ipynb
@@ -491,7 +491,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "id": "db461ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "变量类型表已保存: /Users/muyuanchen/Desktop/NIH_research/nat2018_variable_types_updated.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Step 6: 生成变量类型表 ===\n",
+    "numeric_vars = [\n",
+    "    \"MAGER\",\"BMI\",\"WTGAIN\",\"DBWT\",\"COMBGEST\",\"DLMP_MM\",\"DLMP_YY\",\n",
+    "    \"PRIORLIVE\",\"PRIORDEAD\",\"PRIORTERM\",\"PREVIS\",\"M_HT_IN\",\n",
+    "    \"DOB_YY\",\"DOB_MM\",\"DOB_TT\",\"DOB_WK\",\n",
+    "    \"RF_CESARN\",\"OEGest_Comb\"\n",
+    "]\n",
+    "\n",
+    "categorical_vars = [\n",
+    "    \"PAY\",\"MEDUC\",\"FEDUC\",\"ATTEND\",\"RESTATUS\",\"MBRACE\",\"MRACEHISP\",\"FRACEHISP\",\n",
+    "    \"DPLURAL\",\"FAGECOMB\",\"FHISPX\",\"BFACIL\",\"MHISPX\"\n",
+    "]\n",
+    "\n",
+    "binary_vars = [\n",
+    "    \"SEX\",\"DMAR\",\"MAR_P\",\n",
+    "    \"WIC\",\"RF_PDIAB\",\"RF_GDIAB\",\"RF_PHYPE\",\"RF_GHYPE\",\"RF_EHYPE\",\"RF_PPTTERM\",\n",
+    "    \"RF_INFTR\",\"RF_FEDRG\",\"RF_ARTEC\",\"RF_CESAR\",\"IP_GON\",\"IP_SYPH\",\"IP_CHLAM\",\n",
+    "    \"IP_HEPB\",\"IP_HEPC\",\"NO_INFEC\",\"OB_ECVS\",\"OB_ECVF\",\"LD_INDL\",\"LD_AUGM\",\n",
+    "    \"LD_STER\",\"LD_ANTB\",\"LD_CHOR\",\"LD_ANES\",\"NO_LBRDLV\",\"ME_PRES\",\"ME_TRIAL\",\n",
+    "    \"MM_MTR\",\"MM_PLAC\",\"MM_UHYST\",\"MM_AICU\",\"NO_MMORB\",\"MITRAN\",\"APGAR5R\",\n",
+    "    \"APGAR10R\",\"AB_NICU\",\"AB_SURF\",\"AB_ANTI\",\"AB_SEIZ\",\"NO_ABNORM\",\"CA_ANEN\",\n",
+    "    \"CA_MNSB\",\"CA_CCHD\",\"CA_CDH\",\"CA_OMPH\",\"CA_GAST\",\"CA_LIMB\",\"CA_CLEFT\",\n",
+    "    \"CA_CLPAL\",\"CA_DOWN\",\"CA_DISOR\",\"CA_HYPO\",\"NO_CONGEN\",\"ITRAN\",\"ILIVE\",\"BFED\"\n",
+    "]\n",
+    "\n",
+    "# 构造 DataFrame 保存分类结果\n",
+    "var_types = []\n",
+    "for c in df_final.columns:\n",
+    "    if c in numeric_vars:\n",
+    "        t = \"numeric\"\n",
+    "    elif c in categorical_vars:\n",
+    "        t = \"categorical\"\n",
+    "    elif c in binary_vars:\n",
+    "        t = \"binary\"\n",
+    "    else:\n",
+    "        t = \"unclassified\"\n",
+    "    var_types.append((c, t))\n",
+    "\n",
+    "df_types = pd.DataFrame(var_types, columns=[\"Variable\",\"Type\"])\n",
+    "\n",
+    "# 保存\n",
+    "types_out = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_variable_types_updated.csv\"\n",
+    "df_types.to_csv(types_out, index=False)\n",
+    "\n",
+    "print(\"变量类型表已保存:\", types_out)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "3f8e5a91",
    "metadata": {},
    "outputs": [
