--- a/NIH.ipynb
+++ b/NIH.ipynb
@@ -491,69 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "db461ee5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "变量类型表已保存: /Users/muyuanchen/Desktop/NIH_research/nat2018_variable_types_updated.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# === Step 6: 生成变量类型表 ===\n",
-    "numeric_vars = [\n",
-    "    \"MAGER\",\"BMI\",\"WTGAIN\",\"DBWT\",\"COMBGEST\",\"DLMP_MM\",\"DLMP_YY\",\n",
-    "    \"PRIORLIVE\",\"PRIORDEAD\",\"PRIORTERM\",\"PREVIS\",\"M_HT_IN\",\n",
-    "    \"DOB_YY\",\"DOB_MM\",\"DOB_TT\",\"DOB_WK\",\n",
-    "    \"RF_CESARN\",\"OEGest_Comb\"\n",
-    "]\n",
-    "\n",
-    "categorical_vars = [\n",
-    "    \"PAY\",\"MEDUC\",\"FEDUC\",\"ATTEND\",\"RESTATUS\",\"MBRACE\",\"MRACEHISP\",\"FRACEHISP\",\n",
-    "    \"DPLURAL\",\"FAGECOMB\",\"FHISPX\",\"BFACIL\",\"MHISPX\"\n",
-    "]\n",
-    "\n",
-    "binary_vars = [\n",
-    "    \"SEX\",\"DMAR\",\"MAR_P\",\n",
-    "    \"WIC\",\"RF_PDIAB\",\"RF_GDIAB\",\"RF_PHYPE\",\"RF_GHYPE\",\"RF_EHYPE\",\"RF_PPTTERM\",\n",
-    "    \"RF_INFTR\",\"RF_FEDRG\",\"RF_ARTEC\",\"RF_CESAR\",\"IP_GON\",\"IP_SYPH\",\"IP_CHLAM\",\n",
-    "    \"IP_HEPB\",\"IP_HEPC\",\"NO_INFEC\",\"OB_ECVS\",\"OB_ECVF\",\"LD_INDL\",\"LD_AUGM\",\n",
-    "    \"LD_STER\",\"LD_ANTB\",\"LD_CHOR\",\"LD_ANES\",\"NO_LBRDLV\",\"ME_PRES\",\"ME_TRIAL\",\n",
-    "    \"MM_MTR\",\"MM_PLAC\",\"MM_UHYST\",\"MM_AICU\",\"NO_MMORB\",\"MITRAN\",\"APGAR5R\",\n",
-    "    \"APGAR10R\",\"AB_NICU\",\"AB_SURF\",\"AB_ANTI\",\"AB_SEIZ\",\"NO_ABNORM\",\"CA_ANEN\",\n",
-    "    \"CA_MNSB\",\"CA_CCHD\",\"CA_CDH\",\"CA_OMPH\",\"CA_GAST\",\"CA_LIMB\",\"CA_CLEFT\",\n",
-    "    \"CA_CLPAL\",\"CA_DOWN\",\"CA_DISOR\",\"CA_HYPO\",\"NO_CONGEN\",\"ITRAN\",\"ILIVE\",\"BFED\"\n",
-    "]\n",
-    "\n",
-    "# 构造 DataFrame 保存分类结果\n",
-    "var_types = []\n",
-    "for c in df_final.columns:\n",
-    "    if c in numeric_vars:\n",
-    "        t = \"numeric\"\n",
-    "    elif c in categorical_vars:\n",
-    "        t = \"categorical\"\n",
-    "    elif c in binary_vars:\n",
-    "        t = \"binary\"\n",
-    "    else:\n",
-    "        t = \"unclassified\"\n",
-    "    var_types.append((c, t))\n",
-    "\n",
-    "df_types = pd.DataFrame(var_types, columns=[\"Variable\",\"Type\"])\n",
-    "\n",
-    "# 保存\n",
-    "types_out = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_variable_types_updated.csv\"\n",
-    "df_types.to_csv(types_out, index=False)\n",
-    "\n",
-    "print(\"变量类型表已保存:\", types_out)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3f8e5a91",
    "metadata": {},
    "outputs": [
@@ -572,33 +510,24 @@
     "import warnings; warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "# === 输入输出路径 ===\n",
-    "in_csv = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_cleaned.csv\"\n",
+    "in_csv = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_cleaned.csv\"   # 这里就是你Step5后的 df_final 保存的文件\n",
     "types_csv = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_variable_types_updated.csv\"\n",
     "out_csv = \"/Users/muyuanchen/Desktop/NIH_research/nat2018_model_matrix_final.csv\"\n",
     "\n",
-    "# === 读数据 & 类型表 ===\n",
-    "df = pd.read_csv(in_csv)\n",
+    "# === 读入清洗后的数据 (df_final) & 类型表 ===\n",
+    "df_final = pd.read_csv(in_csv)\n",
     "df_types = pd.read_csv(types_csv)\n",
     "\n",
     "cat_cols = df_types[df_types[\"Type\"]==\"categorical\"][\"Variable\"].tolist()\n",
     "bin_cols = df_types[df_types[\"Type\"]==\"binary\"][\"Variable\"].tolist()\n",
     "num_cols = df_types[df_types[\"Type\"]==\"numeric\"][\"Variable\"].tolist()\n",
     "\n",
-    "# === 定义 Unknown map（逐列，categorical）===\n",
+    "# === 定义 Unknown map（categorical）===\n",
     "UNK_MAP = {\n",
-    "    \"MEDUC\": [9],\n",
-    "    \"FEDUC\": [9],\n",
-    "    \"PAY\": [9],\n",
-    "    \"ATTEND\": [9],\n",
-    "    \"BFACIL\": [9],\n",
-    "    \"RESTATUS\": [9],\n",
-    "    \"MBRACE\": [99],\n",
-    "    \"MRACEHISP\": [8],\n",
-    "    \"FRACEHISP\": [8],\n",
-    "    \"FHISPX\": [9],\n",
-    "    \"MHISPX\": [6, 9],\n",
-    "    \"DPLURAL\": [9],\n",
-    "    \"FAGECOMB\": [99],\n",
+    "    \"MEDUC\": [9], \"FEDUC\": [9], \"PAY\": [9], \"ATTEND\": [9],\n",
+    "    \"BFACIL\": [9], \"RESTATUS\": [9], \"MBRACE\": [99],\n",
+    "    \"MRACEHISP\": [8], \"FRACEHISP\": [8], \"FHISPX\": [9],\n",
+    "    \"MHISPX\": [6, 9], \"DPLURAL\": [9], \"FAGECOMB\": [99],\n",
     "}\n",
     "\n",
     "# === 定义 Binary Unknown map ===\n",
@@ -607,8 +536,7 @@
     "    \"RF_EHYPE\": [\"U\"], \"RF_PPTTERM\": [\"U\"], \"RF_INFTR\": [\"U\"], \"RF_FEDRG\": [\"X\",\"U\"],\n",
     "    \"RF_ARTEC\": [\"X\",\"U\"], \"RF_CESAR\": [\"U\"], \"RF_CESARN\": [9],\n",
     "    \"IP_GON\": [\"U\"], \"IP_SYPH\": [\"U\"], \"IP_CHLAM\": [\"U\"], \"IP_HEPB\": [\"U\"], \"IP_HEPC\": [\"U\"],\n",
-    "    \"NO_INFEC\": [\"U\"],\n",
-    "    \"OB_ECVS\": [\"U\"], \"OB_ECVF\": [\"U\"],\n",
+    "    \"NO_INFEC\": [\"U\"], \"OB_ECVS\": [\"U\"], \"OB_ECVF\": [\"U\"],\n",
     "    \"LD_INDL\": [\"U\"], \"LD_AUGM\": [\"U\"], \"LD_STER\": [\"U\"], \"LD_ANTB\": [\"U\"],\n",
     "    \"LD_CHOR\": [\"U\"], \"LD_ANES\": [\"U\"], \"NO_LBRDLV\": [\"U\"],\n",
     "    \"ME_PRES\": [\"U\"], \"ME_TRIAL\": [\"U\"],\n",
@@ -618,28 +546,28 @@
     "    \"CA_CDH\": [\"U\",\"X\",\"C\",\"P\"], \"CA_OMPH\": [\"U\",\"X\",\"C\",\"P\"], \"CA_GAST\": [\"U\",\"X\",\"C\",\"P\"],\n",
     "    \"CA_LIMB\": [\"U\",\"X\",\"C\",\"P\"], \"CA_CLEFT\": [\"U\",\"X\",\"C\",\"P\"], \"CA_CLPAL\": [\"U\",\"X\",\"C\",\"P\"],\n",
     "    \"CA_DOWN\": [\"U\",\"X\",\"C\",\"P\"], \"CA_DISOR\": [\"U\",\"X\",\"C\",\"P\"], \"CA_HYPO\": [\"U\",\"X\",\"C\",\"P\"],\n",
-    "    \"NO_CONGEN\": [\"U\"],\n",
-    "    \"ITRAN\": [\"U\"], \"ILIVE\": [\"U\"], \"BFED\": [\"U\"],\n",
+    "    \"NO_CONGEN\": [\"U\"], \"ITRAN\": [\"U\"], \"ILIVE\": [\"U\"], \"BFED\": [\"U\"],\n",
     "    \"WIC\": [\"U\"], \"SEX\": [], \"DMAR\": [\"U\"], \"MAR_P\": [\"U\"]\n",
     "}\n",
     "\n",
     "# === Binary 转换 (统一到 0/1/NaN) ===\n",
-    "df_bin = pd.DataFrame(index=df.index)\n",
+    "df_bin = pd.DataFrame(index=df_final.index)\n",
     "for col in bin_cols:\n",
-    "    s = df[col].astype(str).str.strip().str.upper()\n",
-    "    # Unknown 转 NaN\n",
-    "    unk_vals = BIN_UNK_MAP.get(col, [])\n",
-    "    s = s.replace({u: np.nan for u in unk_vals})\n",
-    "    # Y/N/C/P/M → 1,  N/F/0/2 → 0\n",
+    "    if col not in df_final.columns:\n",
+    "        continue\n",
+    "    s = df_final[col].astype(str).str.strip().str.upper()\n",
+    "    s = s.replace({u: np.nan for u in BIN_UNK_MAP.get(col, [])})\n",
     "    s = s.replace({\"Y\":1,\"YES\":1,\"M\":1,\"C\":1,\"P\":1,\"1\":1,\n",
     "                   \"N\":0,\"NO\":0,\"F\":0,\"0\":0,\"2\":0})\n",
     "    s = pd.to_numeric(s, errors=\"coerce\")\n",
     "    df_bin[col] = s.astype(\"Int64\")\n",
     "\n",
     "# === Categorical 转换 (one-hot) ===\n",
-    "df_cat_oh = pd.DataFrame(index=df.index)\n",
+    "df_cat_oh = pd.DataFrame(index=df_final.index)\n",
     "for col in cat_cols:\n",
-    "    s = df[col].copy()\n",
+    "    if col not in df_final.columns:\n",
+    "        continue\n",
+    "    s = df_final[col].copy()\n",
     "    unk_vals = UNK_MAP.get(col, [])\n",
     "    s = s.replace({u: np.nan for u in unk_vals})\n",
     "    s = s.fillna(\"Unknown\")\n",
@@ -647,29 +575,140 @@
     "    df_cat_oh = pd.concat([df_cat_oh, dummies], axis=1)\n",
     "\n",
     "# === Numeric 保留 ===\n",
-    "df_num = df[num_cols].copy()\n",
+    "df_num = df_final[num_cols].copy()\n",
     "\n",
     "# === 按原始顺序拼接 ===\n",
     "parts = []\n",
-    "for col in df.columns:\n",
+    "for col in df_final.columns:\n",
     "    if col in num_cols:\n",
     "        parts.append(df_num[[col]])\n",
     "    elif col in bin_cols:\n",
-    "        parts.append(df_bin[[col]])\n",
+    "        if col in df_bin.columns:\n",
+    "            parts.append(df_bin[[col]])\n",
     "    elif col in cat_cols:\n",
     "        block = df_cat_oh.filter(like=f\"{col}_\")\n",
     "        if block.shape[1] > 0:\n",
     "            parts.append(block)\n",
-    "    else:\n",
-    "        pass  # 未分类的可以选择丢弃\n",
     "\n",
     "df_ordered = pd.concat(parts, axis=1)\n",
     "\n",
     "# === 保存最终矩阵 ===\n",
     "df_ordered.to_csv(out_csv, index=False)\n",
-    "\n",
     "print(\"✅ 已保存:\", out_csv)\n",
-    "print(\"原始维度:\", df.shape, \" → 转换后维度:\", df_ordered.shape)\n"
+    "print(\"原始维度:\", df_final.shape, \" → 转换后维度:\", df_ordered.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59813a38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Ridge 回归结果\n",
+      "RMSE: 463.8910070491198\n",
+      "R²: 0.35956840321712835\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "# baseline\n",
+    "# === 读入最终的模型矩阵 ===\n",
+    "df_ordered = pd.read_csv(\"/Users/muyuanchen/Desktop/NIH_research/nat2018_model_matrix_final.csv\")\n",
+    "\n",
+    "# === 目标变量 ===\n",
+    "y = df_ordered[\"DBWT\"].values\n",
+    "X = df_ordered.drop(columns=[\"DBWT\"])\n",
+    "\n",
+    "# === 缺失值处理 ===\n",
+    "X = X.fillna(0)\n",
+    "\n",
+    "# === 数值标准化 ===\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# === 划分训练/测试集 ===\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# === Ridge 回归 ===\n",
+    "model = Ridge(alpha=1.0)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# === 预测 & 评估 ===\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "rmse = mean_squared_error(y_test, y_pred, squared=False)  # 直接输出RMSE\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"✅ Ridge 回归结果\")\n",
+    "print(\"RMSE:\", rmse)\n",
+    "print(\"R²:\", r2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "64d540c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Ensemble (LightGBM + XGBoost + CatBoost) 回归结果\n",
+      "RMSE: 406.78516763006286\n",
+      "R²: 0.5075398853630678\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm as lgb\n",
+    "import xgboost as xgb\n",
+    "from catboost import CatBoostRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# === LightGBM ===\n",
+    "lgb_train = lgb.Dataset(X_train, label=y_train)\n",
+    "lgb_params = {\"objective\":\"regression\",\"metric\":\"rmse\",\"num_leaves\":63,\"learning_rate\":0.05}\n",
+    "lgb_model = lgb.train(lgb_params, lgb_train, num_boost_round=500)\n",
+    "y_pred_lgb = lgb_model.predict(X_test)\n",
+    "\n",
+    "# === XGBoost ===\n",
+    "xgb_model = xgb.XGBRegressor(\n",
+    "    n_estimators=500, learning_rate=0.05, max_depth=6, subsample=0.8, colsample_bytree=0.8\n",
+    ")\n",
+    "xgb_model.fit(X_train, y_train, eval_set=[(X_test, y_test)], verbose=False)\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
+    "\n",
+    "# === CatBoost ===\n",
+    "cat_model = CatBoostRegressor(\n",
+    "    iterations=500, learning_rate=0.05, depth=6, loss_function=\"RMSE\", verbose=False\n",
+    ")\n",
+    "cat_model.fit(X_train, y_train, eval_set=(X_test, y_test), use_best_model=True)\n",
+    "y_pred_cat = cat_model.predict(X_test)\n",
+    "\n",
+    "# === 简单平均融合 ===\n",
+    "y_pred_ens = (y_pred_lgb + y_pred_xgb + y_pred_cat) / 3\n",
+    "\n",
+    "# === 评估 ===\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, y_pred_ens))\n",
+    "r2 = r2_score(y_test, y_pred_ens)\n",
+    "\n",
+    "print(\"✅ Ensemble (LightGBM + XGBoost + CatBoost) 回归结果\")\n",
+    "print(\"RMSE:\", rmse)\n",
+    "print(\"R²:\", r2)\n"
    ]
   }
  ],
